[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-app"
authors = [
    {name = "Steven A Moore", email = "samoore@binghamton.edu"},
]
description = "Containerized application framework built on Flask with additional libraries and tools for rapid development of web applications."
dynamic = ["version", "dependencies"]
readme = "README.md"
requires-python = ">=3.12"
license={file = "LICENSE"}
classifiers=[
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage="https://github.com/Sallenmoore/autonomous"

[tool.setuptools.dynamic]
#https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#dynamic-metadata
version = {attr = "autonomous.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
dev = {file = ["requirements_dev.txt"]}

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]
include = ["autonomous*"]

[tool.pytest.ini_options]
addopts = "--cov=autonomous -rx -l -x -s --log-level=INFO --ignore=src --no-cov-on-fail -v --pdb --cov-reset "

testpaths = [
     "tests",
]
pythonpath = [
    "src/autonomous",
]
log_auto_indent = true