[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-app"
authors = [
    {name = "Steven A Moore", email = "samoore@binghamton.edu"},
]
description = "Containerized application framework with additional libraries and tools for rapid development of web applications."
dynamic = ["version", "dependencies"]
readme = "README.md"
requires-python = ">=3.12"
#license = {text = "MIT License"}
classifiers=[
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage="https://github.com/Sallenmoore/autonomous"

[tool.setuptools]
# This prevents setuptools from adding the 'License-File' metadata key
# which is causing the "unrecognized field" error in twine.
license-files = []

[tool.setuptools.dynamic]
#https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#dynamic-metadata
version = {attr = "autonomous.__version__"}
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.dynamic.optional-dependencies]
# Per-feature extras. Install with:
#   pip install autonomous-app[tasks]            # background queue
#   pip install autonomous-app[images]           # ImageStorage / PIL
#   pip install autonomous-app[ai]               # Gemini + audio adapters
#   pip install autonomous-app[github]           # GitHub API integration
#   pip install autonomous-app[server]           # gunicorn convenience
#   pip install autonomous-app[all]              # everything
#   pip install autonomous-app[dev]              # tests / lint / build
dev    = {file = ["requirements_dev.txt"]}
tasks  = {file = ["requirements-tasks.txt"]}
images = {file = ["requirements-images.txt"]}
ai     = {file = ["requirements-ai.txt"]}
github = {file = ["requirements-github.txt"]}
server = {file = ["requirements-server.txt"]}
all    = {file = [
    "requirements-tasks.txt",
    "requirements-images.txt",
    "requirements-ai.txt",
    "requirements-github.txt",
    "requirements-server.txt",
]}

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]
include = ["autonomous*"]

[tool.pytest.ini_options]
env_files = [
    "tests/.testenv"
]
env_override_existing_values = 1
addopts = "--cov=autonomous -rx -l -x -s --log-level=INFO --ignore=src --no-cov-on-fail -v --pdb --cov-reset "

testpaths = [
     "tests",
]
pythonpath = [
    "src",
]
log_auto_indent = true